--- a/index.html
+++ b/index.html
@@ -3,66 +3,30 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>个人博客</title>
-    <link rel="stylesheet" type="text/css" href="css/boke.css">
+    <title>个人博客登陆界面</title>
+    <link rel="stylesheet" type="text/css" href="css/denglu.css">
 </head>
 <body>
-    <div class="header">
-        <div class="logo">
-            <h3><a href="">个人博客</a></h3>
-        </div>
-        <div class="nav">
-            <ul>
-                <li class="active">
-                    <a href="">首页</a>
-
-                </li>
-                <li>
-                    <a href="">图集</a>
-
-                </li>
-                <li>
-                    <a href="">爱好</a>
-
-                </li>
-                <li>
-                    <a href="">life</a>
-
-                </li>
-                <li>
-                    <a href="">about</a>
-
-                </li>
-            </ul>
-
-        </div>
-    </div>
     <div class="box">
-        <div class="left-box">
-            <div class="left-box-f">
-                <div class="left-f-top">
-                    <div class="left-f-top-img">
-                        <img src="imag/me.png" alt="">
-
-                        </img>
-                    </div>
-                    <div class="left-f-top-text">
-                        <h3>回中干饭最速传说</h3>
-                        <p>凡人之躯比肩神明</p>
-                    </div>
+        <div class="left">
+            <image src="imag/yun.jpg" alt="">
+        </div>
+        <div class="right">
+            <h1>LOGIN IN</h1>
+            <input type="text" class="input" placeholder="your account">
+            <input type="password" class="input" placeholder="your password">
+            <a href="#" class="forget-password">forget password?</a>
+            <div class="container">
+                <a href="boke.html" target="blank">
+                <button class="learn-more">
+                <div class="circle">
+                  <div class="icon arrow"></div>
                 </div>
-                <div class="left-f-mid">
-    
-                </div>
-                <div class="left-f-end">
-    
-                </div>
+                <span class="button-text">Login In</span>
+                </button>
+                </a>
             </div>
         </div>
-        <div class="right-box">
-
-        </div>
-
     </div>
 </body>
 </html>
